[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/friendly-potato-pixels/new_file_dialog.gd" type="Script" id=1]

[node name="NewFileDialog" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
window_title = "New File"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 7.0
margin_right = -10.0
margin_bottom = -7.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasSize" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1580.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="VBoxContainer/CanvasSize"]
margin_top = 19.0
margin_right = 788.0
margin_bottom = 33.0
size_flags_horizontal = 3
text = "Canvas Size"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CanvasSize"]
margin_left = 792.0
margin_right = 1580.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="CanvasX" type="HBoxContainer" parent="VBoxContainer/CanvasSize/VBoxContainer"]
margin_right = 788.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBoxContainer/CanvasSize/VBoxContainer/CanvasX"]
margin_top = 5.0
margin_right = 8.0
margin_bottom = 19.0
text = "X"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/CanvasSize/VBoxContainer/CanvasX"]
margin_left = 12.0
margin_right = 788.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "32"
placeholder_text = "Canvas width"

[node name="CanvasY" type="HBoxContainer" parent="VBoxContainer/CanvasSize/VBoxContainer"]
margin_top = 28.0
margin_right = 788.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="VBoxContainer/CanvasSize/VBoxContainer/CanvasY"]
margin_top = 5.0
margin_right = 7.0
margin_bottom = 19.0
text = "Y"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/CanvasSize/VBoxContainer/CanvasY"]
margin_left = 11.0
margin_right = 788.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "32"
placeholder_text = "Canvas height"

[node name="ConfirmButtons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 866.0
margin_right = 1580.0
margin_bottom = 886.0
size_flags_vertical = 10

[node name="Accept" type="Button" parent="VBoxContainer/ConfirmButtons"]
margin_left = 366.0
margin_right = 422.0
margin_bottom = 20.0
size_flags_horizontal = 6
text = "Accept"

[node name="Cancel" type="Button" parent="VBoxContainer/ConfirmButtons"]
margin_left = 1159.0
margin_right = 1213.0
margin_bottom = 20.0
size_flags_horizontal = 6
text = "Cancel"
